[tool.poetry]
name = "linecook"
version = "0.4.0"
description = "Prepare lines of text for easy consumption"
readme = "README.rst"
repository = "https://github.com/tonysyu/linecook"
documentation = "https://linecook.readthedocs.io/"
authors = ["Tony S. Yu <tsyu80@gmail.com>"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: BSD License",

    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
keywords = ["console", "terminal", "logging", "parsing", "color"]

[tool.poetry.dependencies]
future = "^0.15"
termcolor = "1.*"
toolz = "^0.9.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
# configparser 3.7.4 causes "`No module named "backport.configparser"` errors.
configparser = "3.5.*"
coverage = "*"
flake8 = "*"
mock = "*"
pytest = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-sugar = "*"
sphinx = "<2"
sphinx-autobuild = "*"
sphinxcontrib-napoleon = "*"
twine = "*"
wheel = "*"

[tool.poetry.scripts]
linecook = "linecook.cli:main"

[build-system]
requires = ["poetry>=0.12"]
